--- a/src/components/GuideBook/GuideBook.css
+++ b/src/components/GuideBook/GuideBook.css
@@ -1,7 +1,47 @@
 #guide-book{
   background: #fff;
+  padding: 1rem;
+  position: relative;
+  border-radius: 5px;
+  box-shadow: 0px 1px 5px 1px #ccc;
 }
 
-#guide-book > h4:first-child{
-  text-align: center;;
+#guide-book > .guidebook-title:first-child{
+  text-align: center;
 }
+
+#guide-book .nav-item{
+  cursor: pointer;
+  background: none;
+  border:none;
+  padding: 0;
+  font-size: 18px;
+  margin: 0 !important;
+  font-weight: bold;
+}
+
+#guide-book .sidebar-submenu{
+  height: 0;
+  transition: all .5s;
+  overflow: hidden;
+}
+
+#guide-book .sidebar-submenu ul{ list-style: none; padding-left: 1rem; }
+
+#guide-book .sidebar-submenu.active{
+  transition: all .5s;
+  height: auto;
+}
+
+#guide-book .sidebar-submenu.active ul li{ margin-bottom: 1.5rem; }
+
+#guide-book .sidebar-submenu.active ul li button{
+  background: none;
+  margin: 0;
+  display: inline-block;
+  border: none;
+  cursor: pointer;
+  font-size: 1rem;
+}
+
+#guide-book .sidebar-submenu.active ul li button:hover{ color: #5F65FF; }
