--- a/src/components/Tabs/Tabs.css
+++ b/src/components/Tabs/Tabs.css
@@ -39,12 +39,12 @@
 .tabs-contents > .tab-content{
   width: 100%;
   background: #fff;
-  border: 1px solid #ccc5;
+  /* border: 1px solid #ccc5; */
   border-top:none;
   border-top: transparent;
   display: none;  
   padding: 1rem 0;
-  position: absolute;
+  /* position: absolute; */
   top: 0;
   left: 0;
 }
