--- a/src/components/GuideBook/GuideBook.css
+++ b/src/components/GuideBook/GuideBook.css
@@ -16,7 +16,6 @@
   border:none;
   padding: 0;
   font-size: 18px;
-  margin: 0 !important;
   font-weight: bold;
 }
 
@@ -45,3 +44,10 @@
 }
 
 #guide-book .sidebar-submenu.active ul li button:hover{ color: #5F65FF; }
+
+#guide-book .guidebook-section ol li{ margin-bottom: 1.5rem; }
+
+#guide-book .guidebook-section .guidebook-section-title{
+  font-size: 1.17rem;
+  margin-bottom: 1.5rem;
+}
