setup username @ symbol

--- a/src/components/Avatar/Avatar.css
+++ b/src/components/Avatar/Avatar.css
@@ -14,6 +14,12 @@
   border-radius: 16px;
 }
 
+.avatar.large {
+  height: 40px;
+  width: 40px;
+  border-radius: 20px;
+}
+
 .avatar.highlighted {
   box-shadow: 0 0 0 2px #5F65FF;
 }
