--- a/src/components/ValidatingFormInput/ValidatingFormInput.css
+++ b/src/components/ValidatingFormInput/ValidatingFormInput.css
@@ -22,14 +22,30 @@
   flex: 1;
 }
 
-.validating_form_input input {
+.validating_form_input .input_wrapper {
+  flex: 1;
+  display: flex;
+  position: relative;
+}
+
+.validating_form_input .input_wrapper input {
   border: 1px solid #D1D1D1;
   outline: none;
   font-size: 14px;
-  line-height: 17px;
+  line-height: 16px;
   color: #717171;
-  padding: 12px;
+  padding: 11px;
   border-radius: 5px;
   display: block;
   flex: 1;
+}
+
+.validating_form_input input.with_at_symbol {
+  padding-left: 24px;
+}
+
+.validating_form_input .at_symbol {
+  position: absolute;
+  top: 13px;
+  left: 12px;
 }
