--- a/src/components/GuideBook/Tabs/Tabs.css
+++ b/src/components/GuideBook/Tabs/Tabs.css
@@ -19,7 +19,7 @@
   border:none;
   border-bottom:3px solid #ccc; 
   line-height: 3;
-  padding: .5rem;
+  padding: .5rem !important;
   transition: all .5s;
   font-weight: bold;
   margin: 0 !important;
@@ -43,7 +43,7 @@
   border-top:none;
   border-top: transparent;
   display: none;  
-  padding: 1rem 0;
+  padding: 2rem 0 !important;
   /* position: absolute; */
   top: 0;
   left: 0;
