--- a/src/components/ProfileEditForm/ProfileEditForm.css
+++ b/src/components/ProfileEditForm/ProfileEditForm.css
@@ -14,6 +14,13 @@
   text-align: center;
 }
 
+.profile_edit_form .close_icon {
+  position: absolute;
+  top: 30px;
+  right: 30px;
+  cursor: pointer;
+}
+
 .profile_edit_form h1 {
   margin-top: 0;
   font-size: 20px;
