--- a/src/components/Empty/empty.css
+++ b/src/components/Empty/empty.css
@@ -68,10 +68,13 @@
     display: inline-block;
     position: relative;
   }
+  .avatar_container img{
+    border-radius: 50%;
+  }
   
   .status2 div img{ width: 100%;display: block; }
   
-  .status2 div img + span{
+  .status2 div .avatar_container + span{
     position: absolute;
     width: 12px;
     height: 12px;
@@ -80,28 +83,28 @@
     transform: translate(-50%,-50%);
     border-radius: 50%;
    }
-   .blue img + span{
+   .blue .avatar_container + span{
     background-color: blue;
    }
-   .green img + span{
+   .green .avatar_container + span{
     background-color: green;
    }
-   .yellow img + span{
+   .yellow .avatar_container + span{
     background-color: yellow;
    }
-   .gray img + span{
+   .gray .avatar_container + span{
     background-color: gray;
    }
-   button.green img{
+   button.green .avatar_container{
     background-color: green;
    }
-   button.blue img {
+   button.blue .avatar_container {
     background-color: blue;
    }
-   button.yellow img {
+   button.yellow .avatar_container {
     background-color: yellow;
    }
-   button.gray img {
+   button.gray .avatar_container {
     background-color: gray;
    }
    .status_change button img {
