--- a/src/components/GuideBook/GuideBook.css
+++ b/src/components/GuideBook/GuideBook.css
@@ -1,48 +1,47 @@
-#guide-book{
-  background: #fff;
-  padding: 1rem;
+.guide-book{
   position: relative;
-  border-radius: 5px;
-  box-shadow: 0px 1px 5px 1px #ccc;
 }
 
-#guide-book *{
+.guide-book *{
   margin: 0;
   padding: 0;
 }
 
-#guide-book > .guidebook-title:first-child{
+.guide-book > .guidebook-title:first-child{
   text-align: center;
-  margin-top: 1rem;
-  margin-bottom: 2rem;
+  margin-top: 15px;
+  margin-bottom: 30px;
+  font-size: 24px;
+  font-family: 'rennerbold', Helvetica, sans-serif;
 }
 
-#guide-book .nav-item{
+.guide-book .nav-item{
   cursor: pointer;
   background: none;
   border:none;
   padding: 0;
-  font-size: 18px;
-  font-weight: bold;
+  font-size: 16px;
   margin-bottom: 1.5rem;;
+  font-family: 'rennerbold', Helvetica, sans-serif;
 }
 
-#guide-book .sidebar-submenu{
+.guide-book .sidebar-submenu{
   height: 0;
-  transition: all .5s;
+  transition: all .3s;
   overflow: hidden;
 }
 
-#guide-book .sidebar-submenu ul{ list-style: none; padding-left: 1rem; }
+.guide-book .sidebar-submenu ul{ list-style: none; padding-left: 1rem; }
 
-#guide-book .sidebar-submenu.active{
-  transition: all .5s;
+.guide-book .sidebar-submenu.active{
+  transition: all .3s;
   height: auto;
+  font-family: 'renner_mediummedium', Helvetica, sans-serif;
 }
 
-#guide-book .sidebar-submenu.active ul li{ margin-bottom: 1.5rem; }
+.guide-book .sidebar-submenu.active ul li{ margin-bottom: 1.5rem; }
 
-#guide-book .sidebar-submenu.active ul li button{
+.guide-book .sidebar-submenu.active ul li button{
   background: none;
   margin: 0;
   display: inline-block;
@@ -51,14 +50,14 @@
   font-size: 1rem;
 }
 
-#guide-book .guidebook-section{
+.guide-book .guidebook-section{
   display: flex;
   flex-direction: row;
 }
 
-#guide-book .guidebook-section .guidebook-section-control{ margin-right: 1.5rem; }
+.guide-book .guidebook-section .guidebook-section-control{ margin-right: 1.5rem; }
 
-#guide-book .guidebook-section .guidebook-section-control >  button{
+.guide-book .guidebook-section .guidebook-section-control >  button{
   display: inline-block;
   background: none;
   border: none;
@@ -70,22 +69,22 @@
   cursor: pointer;
 }
 
-#guide-book .sidebar-submenu.active ul li button:hover{ color: #5F65FF; }
+.guide-book .sidebar-submenu.active ul li button:hover{ color: #5F65FF; }
 
-#guide-book .guidebook-section ol{
+.guide-book .guidebook-section ol{
   margin: 0;
   padding: 0;
   padding-left: 1rem;
 }
-#guide-book .guidebook-section ol li{  
+.guide-book .guidebook-section ol li{  
   margin: 0;
   margin-bottom: 1.5rem;
 }
 
-#guide-book .guidebook-section .guidebook-section-title{
+.guide-book .guidebook-section .guidebook-section-title{
   font-size: 1.17rem;
   margin: 0 0 1.5rem 0;
 }
 
 
-#guide-book button{ outline: none; }
+.guide-book button{ outline: none; }
