--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,268 +1,271 @@
-.react{
-    width: 100%;
-  }
+.react {
+  width: 100%;
+}
 
-  .header{
-    margin-top: 10px;
-    margin-right: 10px;
-    margin-left: 10px;
-    display: flex;
-    justify-content: space-between;
-    max-height: 50px;
-  }
+.header {
+  margin-top: 10px;
+  margin-right: 10px;
+  margin-left: 10px;
+  display: flex;
+  justify-content: space-between;
+  max-height: 50px;
+}
 
-  .top-left-panel {
-    display: flex;
-    width: auto;
-  }
+.top-left-panel {
+  display: flex;
+  width: auto;
+}
 
-  .logo{
-    padding-right: 20px;
-    padding-left: 20px;
-    background: #FFFFFF 0% 0% no-repeat padding-box;
-    border-radius: 10px;
-    opacity: 0.8;
-    display: -webkit-flex; /* Safari */
-    -webkit-align-items: center; /* Safari 7.0+ */
-    display: flex;
-    align-items: center;
-  }
+.logo {
+  padding-right: 20px;
+  padding-left: 20px;
+  background: #FFFFFF 0% 0% no-repeat padding-box;
+  border-radius: 10px;
+  opacity: 0.8;
+  display: -webkit-flex;
+  /* Safari */
+  -webkit-align-items: center;
+  /* Safari 7.0+ */
+  display: flex;
+  align-items: center;
+}
 
-  .current-canvas{
-    margin-left: 5px;
-    padding-right: 20px;
-    padding-left: 20px;
-    background: #FFFFFF 0% 0% no-repeat padding-box;
-    border-radius: 10px;
-    opacity: 0.8;
-    display: -webkit-flex; /* Safari */
-    -webkit-align-items: center; /* Safari 7.0+ */
-    display: flex;
-    align-items: center;
-  }
+.current-canvas {
+  margin-left: 5px;
+  padding-right: 20px;
+  padding-left: 20px;
+  background: #FFFFFF 0% 0% no-repeat padding-box;
+  border-radius: 10px;
+  opacity: 0.8;
+  display: -webkit-flex;
+  /* Safari */
+  -webkit-align-items: center;
+  /* Safari 7.0+ */
+  display: flex;
+  align-items: center;
+}
 
-  .fixed{
-    position: fixed;
-    width: 100%;
-  }
+.fixed {
+  position: fixed;
+  width: 100%;
+}
 
-  .header-icon {
-    height: 24px;
-    margin: 0px;
-    display: inline-block;
-    position: relative;
-    margin: 12px;
-  }
+.header-icon {
+  height: 24px;
+  margin: 0px;
+  display: inline-block;
+  position: relative;
+  margin: 12px;
+}
 
-  .logo p{
-    text-align: left;
-    letter-spacing: 0;
-    color: black;
-    margin-top: -10px;
-  }
-  
-  .canvas-name {
-    font-family: 'quebecregular', Helvetica, Sans-Serif;
-    font-weight: normal;
-    font-size: 18px;
-    margin-bottom: 23px;
-  }
+.logo p {
+  text-align: left;
+  letter-spacing: 0;
+  color: black;
+  margin-top: -10px;
+}
 
-  .logo-name{
-    margin: 1px;
-    font-family: 'quebecsemibold', Helvetica, Sans-Serif;
-    font-weight: bold;
-    font-size: 28px;
-  }
+.canvas-name {
+  font-family: 'quebecregular', Helvetica, Sans-Serif;
+  font-weight: normal;
+  font-size: 18px;
+  margin-bottom: 23px;
+}
 
-  .logo h3{
-    margin-top: 16px;
-  }
-  
-  .top-right-panel{
-    margin-left: 10px;
-    padding: 5px 20px 5px 20px;
-    background: #FFFFFF 0% 0% no-repeat padding-box;
-    border-radius: 10px;
-    opacity: 0.8;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-  }
-  
+.logo-name {
+  margin: 1px;
+  font-family: 'quebecsemibold', Helvetica, Sans-Serif;
+  font-weight: bold;
+  font-size: 28px;
+}
 
-  .stop-right-panel div img{ width: 100%;display: block; }
-  
-  
-  /* guidebook section on header */
- 
-  .instructions_wrapper{
-    float: right;
-    position: relative;
-    border-radius: 10px 0 0 10px;
-    margin-top: 20px;
-    background-color: #FFFFFF;
-    padding: 20px 36px;
-    box-shadow: 0px 0px 6px #00000029;
-    width: 616px;
-    min-height: 80%;
-  }
+.logo h3 {
+  margin-top: 16px;
+}
 
-  .instructions_wrapper button {
-   margin: 10px;
-  }
+.top-right-panel {
+  margin-left: 10px;
+  padding: 5px 20px 5px 20px;
+  background: #FFFFFF 0% 0% no-repeat padding-box;
+  border-radius: 10px;
+  opacity: 0.8;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
 
-  .instructions {
-    font-family: 'rennerbook', Helvetica, Sans-Serif;
-    margin-left: 10px;
-    color: #4D4D4D;
-  }
+.stop-right-panel div img {
+  width: 100%;
+  display: block;
+}
 
+/* guidebook section on header */
 
-   /* profile section on header */
+.instructions_wrapper {
+  float: right;
+  position: relative;
+  border-radius: 10px 0 0 10px;
+  margin-top: 20px;
+  background-color: #FFFFFF;
+  padding: 20px 36px;
+  box-shadow: 0px 0px 6px #00000029;
+  width: 616px;
+  min-height: 80%;
+}
 
-   .top-right-panel> img,.top-right-panel >div{
-    width: 32px;
-    height: 32px;
-    margin: 0px;
-    display: inline-block;
-    position: relative;
-  }
+.instructions_wrapper button {
+  margin: 10px;
+}
 
-  .top-right-panel icon{
-    margin-right: 10px;
-  }
+.instructions {
+  font-family: 'rennerbook', Helvetica, Sans-Serif;
+  margin-left: 10px;
+  color: #4D4D4D;
+}
 
-  .avatar_container img{
-    border-radius: 50%;
-    height: 32px;
-    width: 32px;
-  }
+/* profile section on header */
 
-   .top-right-panel div .avatar_container + span{
-    position: absolute;
-    width: 16px;
-    height: 16px;
-    top: 80%;
-    left: 80%;
-    transform: translate(-50%,-50%);
-    border-radius: 50%;
-   }
+.top-right-panel>img, .top-right-panel>div {
+  width: 32px;
+  height: 32px;
+  margin: 0px;
+  display: inline-block;
+  position: relative;
+}
 
-   .profile-wrapper button p{
-    font-family:'rennerbook', Helvetica, Sans-Serif;
-    font-size: 14px;
-    padding: 0 20px;
-   }
+.top-right-panel icon {
+  margin-right: 10px;
+}
 
-  .profile-wrapper button:hover{
-     background: #F4F4F4 none repeat scroll 0% 0%;
-     color:#5F65FF;
-   }
+.avatar_container img {
+  border-radius: 50%;
+  height: 32px;
+  width: 32px;
+}
 
-   .profile-wrapper button img {
-    border-radius: 50%;
-    height: 16px;
-    width: 16px;
-   }
+.top-right-panel div .avatar_container+span {
+  position: absolute;
+  width: 16px;
+  height: 16px;
+  top: 80%;
+  left: 80%;
+  transform: translate(-50%, -50%);
+  border-radius: 50%;
+}
 
-   .profile-wrapper button{
-    outline: none;
-    background: none;
-    border: none;
-    text-decoration: none;
-    cursor: pointer;
-    display: flex;
-    align-items: center;
-  }
+.profile-wrapper button p {
+  font-family: 'rennerbook', Helvetica, Sans-Serif;
+  font-size: 14px;
+  padding: 0 20px;
+}
 
-  .profile-wrapper{
-    margin-top: 5px;
-    margin-right: 10px;
-    float: right;
-    border-radius:14px;
-    background-color: #FFFFFF;
-    padding: 12px 0;
-    box-shadow: 0px 0px 6px #00000029;
-    display: flex;
-    flex-direction: column;
-   }
+.profile-wrapper button:hover {
+  background: #F4F4F4 none repeat scroll 0% 0%;
+  color: #5F65FF;
+}
 
-   /* user status on header */
+.profile-wrapper button img {
+  border-radius: 50%;
+  height: 16px;
+  width: 16px;
+}
 
-   .btn:hover{
-    background-color: #F2F2F2;
-  }
+.profile-wrapper button {
+  outline: none;
+  background: none;
+  border: none;
+  text-decoration: none;
+  cursor: pointer;
+  display: flex;
+  align-items: center;
+}
 
-   .purple .avatar_container + span{
-    background-color: #5F65FF;
-   }
+.profile-wrapper {
+  margin-top: 5px;
+  margin-right: 10px;
+  float: right;
+  border-radius: 14px;
+  background-color: #FFFFFF;
+  padding: 12px 0;
+  box-shadow: 0px 0px 6px #00000029;
+  display: flex;
+  flex-direction: column;
+}
 
-   .green .avatar_container + span{
-    background-color: #00D0C0;
-   }
+/* user status on header */
 
-   .yellow .avatar_container + span{
-    background-color: #FFC400;
-   }
+.btn:hover {
+  background-color: #F2F2F2;
+}
 
-   .gray .avatar_container + span{
-    background-color: #D1D1D1;
-   }
+.purple .avatar_container+span {
+  background-color: #5F65FF;
+}
 
-   button.green img{
-    background-color: #00D0C0;
-   }
+.green .avatar_container+span {
+  background-color: #00D0C0;
+}
 
-   button.purple img {
-    background-color: #5F65FF;
-   }
+.yellow .avatar_container+span {
+  background-color: #FFC400;
+}
 
-   button.yellow img {
-    background-color: #FFC400;
-   }
+.gray .avatar_container+span {
+  background-color: #D1D1D1;
+}
 
-   button.gray img {
-    background-color: #D1D1D1;
-   }
+button.green img {
+  background-color: #00D0C0;
+}
 
-   .user-status-wrapper{
-    margin-top: 5px;
-    margin-right: 10px;
-    float: right;
-    border-radius:14px;
-    background-color: #FFFFFF;
-    padding: 12px 0;
-    box-shadow: 0px 0px 6px #00000029;
-    display: flex;
-    flex-direction: column;
-   }
+button.purple img {
+  background-color: #5F65FF;
+}
 
-   .user-status-wrapper button{
-    padding: 0 25px;
-    outline: none;
-    background: none;
-    border: none;
-    text-decoration: none;
-    cursor: pointer;
-    display: flex;
-    align-items: center;
-  }
+button.yellow img {
+  background-color: #FFC400;
+}
 
-  .user-status-wrapper button img {
-    border-radius: 50%;
-    height: 16px;
-    width: 16px;
-   }
+button.gray img {
+  background-color: #D1D1D1;
+}
 
-   .user-status-wrapper button p{
-    font-family:'rennerbook', Helvetica, Sans-Serif;
-    font-size: 14px;
-    padding-left: 10px;
-   }
+.user-status-wrapper {
+  margin-top: 5px;
+  margin-right: 10px;
+  float: right;
+  border-radius: 14px;
+  background-color: #FFFFFF;
+  padding: 12px 0;
+  box-shadow: 0px 0px 6px #00000029;
+  display: flex;
+  flex-direction: column;
+}
 
-  .user-status-wrapper button:hover{
-     background: #F4F4F4 none repeat scroll 0% 0%;
-     color:#5F65FF;
-   }
+.user-status-wrapper button {
+  padding: 0 25px;
+  outline: none;
+  background: none;
+  border: none;
+  text-decoration: none;
+  cursor: pointer;
+  display: flex;
+  align-items: center;
+}
 
+.user-status-wrapper button img {
+  border-radius: 50%;
+  height: 16px;
+  width: 16px;
+}
+
+.user-status-wrapper button p {
+  font-family: 'rennerbook', Helvetica, Sans-Serif;
+  font-size: 14px;
+  padding-left: 10px;
+}
+
+.user-status-wrapper button:hover {
+  background: #F4F4F4 none repeat scroll 0% 0%;
+  color: #5F65FF;
+}
