--- a/src/components/GuideBook/Tabs/Tabs.css
+++ b/src/components/GuideBook/Tabs/Tabs.css
@@ -17,15 +17,13 @@
   background-color: #fff;
   border: none;
   border-bottom: 1px solid #E8E8E8; 
-  line-height: 3;
   transition: all .3s;
   margin: 0;
   color: #222222;
   font-family: 'rennerbold', Helvetica, sans-serif;
   box-sizing: border-box;
   height: 50px;
-  letter-spacing: 0.5px;
-  font-size: 16px;
+  font-size: 14px;
 }
 
 .tabs  > .tabs-links > button.tab-link:hover{
@@ -40,21 +38,21 @@
   stroke-linecap: round;
 }
 
-.tabs-contents{ position: relative; }
+.tabs-contents { 
+  position: relative; 
+}
 
 .tabs-contents > .tab-content{
-  width: 100%;
   background: #fff;
   /* border: 1px solid #ccc5; */
-  border-top:none;
+  border-top: none;
   border-top: transparent;
   display: none;  
-  padding: 2rem 0 !important;
+  padding: 0;
   /* position: absolute; */
-  top: 0;
-  left: 0;
 }
 
 .tab-content.active{
   display: block;
+  padding: 30px;
 }
