--- a/src/components/ProfileEditForm/ProfileEditForm.css
+++ b/src/components/ProfileEditForm/ProfileEditForm.css
@@ -20,21 +20,23 @@
   cursor: pointer;
 }
 
+.profile_edit_form_title {
+  margin-bottom: 64px;
+}
+
 .profile_edit_form h1 {
-  margin-top: 0;
+  margin-bottom: 0;
   font-size: 20px;
   line-height: 24px;
   color: #222222;
   font-family: 'rennerbold'
 }
 
-.profile_edit_form h2 {
+.profile_edit_form h4 {
   font-size: 14px;
   line-height: 17px;
-  letter-spacing: 0.14px;
   color: #717171;
   font-weight: normal;
-  margin-bottom: 63px;
 }
 
 .help_text {
