--- a/src/components/CreateProfilePage/CreateProfilePage.css
+++ b/src/components/CreateProfilePage/CreateProfilePage.css
@@ -1,6 +1,6 @@
 .create_profile_page {
   width: 100%;
-  height: 100%;
+  height: 100vh;
   background: #FFFFFF;
   display: flex;
   flex-direction: row;
