--- a/src/components/LoadingScreen/LoadingScreen.css
+++ b/src/components/LoadingScreen/LoadingScreen.css
@@ -14,6 +14,7 @@
   margin: 0 auto;
   font-family: 'quebecsemibold', Helvetica, Sans-Serif;
   color: #717171;
+  font-weight: normal;
 }
 
 .loading_screen img {
