--- a/src/components/Zoom/ZoomOptions.css
+++ b/src/components/Zoom/ZoomOptions.css
@@ -4,15 +4,22 @@
   right: 10px;
   background-color: #FFFFFF;
   border-radius: 10px;
-  padding: 10px 20px;
-  width: 110px;
   display: flex;
 }
 
-.zoom-options img,span{
+.zoom-options img, span{
   display: inline-block;
 }
 
-.zoom-options img{
-  margin-right: 1rem;
+.zoom-options span {
+  line-height: 60px;
+  font-size: 20px;
+  margin: 0 21px;
+  min-width: 60px;
+  font-family: 'renner_mediummedium', Helvetica, sans-serif;
+}
+
+.zoom-options img.icon {
+  padding: 21px;
+  box-sizing: content-box;
 }
