--- a/src/components/Zoom/ZoomOptions.css
+++ b/src/components/Zoom/ZoomOptions.css
@@ -2,9 +2,12 @@
   position: fixed;
   bottom: 10px;
   right: 10px;
-  background-color: #FFFFFF;
+  background: rgba(255, 255, 255, 0.9) 0% 0% no-repeat padding-box;
   border-radius: 10px;
   display: flex;
+  align-items: center;
+  max-height: 60px;
+  padding: 16px 20px;
 }
 
 .zoom-options img, span{
@@ -12,14 +15,13 @@
 }
 
 .zoom-options span {
-  line-height: 60px;
-  font-size: 20px;
-  margin: 0 21px;
-  min-width: 60px;
+  font-size: 16px;
   font-family: 'renner_mediummedium', Helvetica, sans-serif;
+  font-weight: normal;
 }
 
 .zoom-options img.icon {
-  padding: 21px;
+  margin-right: 24px;
+  padding: 4px;
   box-sizing: content-box;
 }
