--- a/src/components/CreateProfilePage/CreateProfilePage.css
+++ b/src/components/CreateProfilePage/CreateProfilePage.css
@@ -15,7 +15,7 @@
 }
 
 .create_profile_splash_image {
-  background-image: url('img/splash-image.png');
+  background-image: url('/img/splash-image.png');
   background-repeat: no-repeat;
   background-size: cover;
   width: 50%;
