--- a/src/components/Button/Button.css
+++ b/src/components/Button/Button.css
@@ -1,6 +1,6 @@
 .button {
   border-radius: 25px;
-  background: #6600FFF2;
+  background: #6600FF;
   color: #FFFFFF;
   outline: none;
   border: none;
@@ -8,7 +8,7 @@
   line-height: 19px;
   padding: 16px 45px;
   cursor: pointer;
-  font-family: 'renner_mediummedium'
+  font-family: 'renner_mediummedium', Helvetica, sans-serif;
 }
 
 .button:hover {
@@ -33,4 +33,50 @@
 
 .clear_button:hover {
   color: #5F65FF;
+}
+
+
+.button.purple {
+  background: #6600FF;
+  color: #FFFFFF;
+}
+
+.button.purple:hover {
+  background: #7C24FF;
+}
+
+.button.green {
+  background: #00AFA4;
+  color: #FFFFFF;
+}
+
+.button.green:hover {
+  background: #00BEB0;
+}
+
+.button.small {
+  border-radius: 25px;
+  outline: none;
+  border: none;
+  font-size: 13px;
+  line-height: 16px;
+  padding: 8px 32px;
+}
+
+.button.medium {
+  border-radius: 25px;
+  outline: none;
+  border: none;
+  font-size: 14px;
+  line-height: 18px;
+  padding: 11px 40px;
+}
+
+.button.large {
+  border-radius: 25px;
+  outline: none;
+  border: none;
+  font-size: 16px;
+  line-height: 19px;
+  padding: 13px 40px;
 }
