--- a/src/components/LoadingScreen/LoadingScreen.css
+++ b/src/components/LoadingScreen/LoadingScreen.css
@@ -19,7 +19,8 @@
 }
 
 .loading_screen img {
-  height: 80px;
+  height: 44px;
+  padding: 10px;
   -webkit-animation:spin 2s linear infinite;
   -moz-animation:spin 2s linear infinite;
   animation:spin 2s linear infinite;
