--- a/src/routes/PriorityView.css
+++ b/src/routes/PriorityView.css
@@ -1,14 +1,14 @@
 .priority-view-wrapper {
   background: white;
   width: 100vw;
-  top: 71px;
-  bottom: 71px;
+  top: 70px;
+  bottom: 0px;
   position: absolute;
 }
 
 .indented-view-wrapper {
   width: 180px;
-  height: calc(100vh - 71px);
+  height: calc(100vh - 70px);
   padding: 15px;
   float: left;
   background: #F2F2F2 0% 0% no-repeat padding-box;
@@ -23,6 +23,7 @@
   flex-direction: row;
   align-items: center;
   padding-left: 10px;
+  border-bottom: solid 1px #D9D9D9;
 }
 
 .priority-menu-item {
@@ -32,6 +33,7 @@
   font-weight: normal;
   font-size: 14px;
   text-decoration: none;
+  color: #898989;
 }
 
 .priority-menu-item.active {
@@ -42,21 +44,29 @@
 }
 
 
-.priority-quadrants {
+.priority-quadrants-wrapper {
   height: calc(100% - 52px);
   margin-left: 210px;
-  padding-right: 20px;
-  padding-left: 20px;
+}
+
+.priority-quadrands-content {
+  display: flex;
+  flex-direction: column;
+  margin-top: 20px;
+  height: 100%;
 }
 
 .priority-quadrants-row {
   display: flex;
   flex-direction:row;
-  border-top: solid 1px #D9D9D9;
-  height: 50%;
+  height: calc(50% - 40px);
 }
 
-.priority-quadrants-divider {
+.priority-quadrants-vertical-divider {
   border-right: solid 1px #D9D9D9;
-  margin: 20px 0 20px 0;
+}
+
+.priority-quadrants-horizontal-divider {
+  border-top: solid 1px #D9D9D9;
+  margin: 0 20px 0 20px;
 }
