changes/updated on priority view and priority quadrants .js and .css

--- a/src/components/PriorityQuadrant/PriorityQuadrant.css
+++ b/src/components/PriorityQuadrant/PriorityQuadrant.css
@@ -1,7 +1,9 @@
 .priority-quadrant {
   background: white;
   width: 50%;
-  margin: 0 20px 0 20px;
+  display: flex;
+  flex-direction: column;
+  margin-left: 20px;
 }
 
 .priority-quadrant-title {
@@ -25,7 +27,7 @@
   margin-top: 20px;
 }
 .priority-quadrant-title.less-urgent-less-important {
-  color: #6600FFF2;
+  color: #6DB7CE;
   margin-top: 20px;
 }
 
@@ -33,67 +35,3 @@
   overflow-y: scroll;
 }
 
-.priority-quadrant-goal-item {
-  display: flex;
-  flex-direction: column;
-  border-bottom: solid 1px #F2F2F2; 
-  padding: 16px;
-}
-
-
-.priority-quadrant-goals:hover {
-  background: #F9F9F9;
-}
-
-.priority-quadrant-goal-title {
-  display: flex;
-  flex-direction: row;
-  padding-bottom: 12px;
-  padding-right: 30px;
-  font-family: 'renner_mediummedium', Helvetica, sans-serif;
-  font-weight: normal;
-  font-size: 16px;
-  line-height: 22px;
-  color: #4D4D4D;
-}
-
-.priority-quadrant-goal-title img {
-  margin-right: 10px;
-}
-
-.priority-quadrant-goal-info {
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  color: #898989;
-  font-size: 12px;
-  margin-left: 28px;
-  padding-right: 30px;
-}
-
-.priority-quadrant-goal-info img {
-  margin-right: 6px;
-}
-
-.priority-quadrant-goal-info span {
-  margin-right: 10px;
-}
-
-.priority-quadrant-goal-right-menu {
-  margin-top: -50px;
-}
-
-.priority-quadrant-goal-view-mode-icons {
-  display: flex;
-  flex-direction: column;
-  float: right;
-}
-
-.priority-quadrant-goal-view-mode-icons img {
-}
-
-.priority-quadrant-goal-view-mode-icons img:hover {
-  background: white;
-  padding: 4px;
-  border-radius: 5px;
-}
